[gd_scene load_steps=3 format=3 uid="uid://dct2yvx68hix0"]

[ext_resource type="Script" uid="uid://cr38gxaer51vo" path="res://scripts/phrases.gd" id="1_5ao7r"]
[ext_resource type="PackedScene" uid="uid://bn4m2tay0i6rj" path="res://scenes/filterable_list.tscn" id="2_qq4x6"]

[node name="Phrases" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_5ao7r")

[node name="FilterableList" parent="." instance=ExtResource("2_qq4x6")]

[node name="Phrase" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 22.6
anchor_right = 26.0
anchor_bottom = 33.4
offset_left = 8.0
offset_top = 120.0
offset_right = 16.0
offset_bottom = 128.0
theme_override_constants/caret_width = 3
placeholder_text = "Enter a phrase here"
wrap_mode = 1
caret_blink = true
caret_move_on_right_click = false
caret_multiple = false

[node name="Save" type="Button" parent="."]
layout_mode = 0
offset_left = 528.0
offset_top = 1480.0
offset_right = 1042.0
offset_bottom = 1582.0
text = "Save"

[node name="Lists" type="Button" parent="."]
layout_mode = 0
offset_left = 248.0
offset_top = 1480.0
offset_right = 504.0
offset_bottom = 1582.0
text = "Lists"

[node name="Delete" type="Button" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 1480.0
offset_right = 224.0
offset_bottom = 1582.0
text = "Delete"

[node name="New" type="Button" parent="."]
layout_mode = 0
offset_left = 672.0
offset_top = 752.0
offset_right = 1050.0
offset_bottom = 854.0
text = "New phrase"

[connection signal="text_changed" from="Phrase" to="." method="_on_phrase_text_changed"]
[connection signal="pressed" from="Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Lists" to="." method="_on_lists_pressed"]
[connection signal="pressed" from="New" to="." method="_on_new_pressed"]
